--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -670,7 +670,7 @@ Log data were recorded during all scenarios, however these data were not recorde
 
 \subsubsection{Comparing traditional \& PR scenarios}
 
-For all participants there was substantially more yaw change than pitch change, in both traditional \& PR scenarios. Can't really compare between traditional \& PR, however for what we do have of traditional they exhibit this more yaw than pitch relationship. This is the same as for stage 1.
+For all participants there was again substantially more yaw change than pitch change, in both traditional \& PR scenarios. Figure \ref{2-1-8-pitch-yaw-trad-1-3-1-4.png} shows this relationship by plotting pitch \& yaw against time for participant 8 for all three scenarios (traditional at left, scenario 1-3 in the middle \& scenario 1-4 at right) \& the standard deviations for all participants across all three scenarios is given by tables \ref{2-1-sd-trad}, \ref{2-1-sd-1-3} \& \ref{2-1-sd-1-4}.
 
 \begin{figure}[h]
 	\begin{center}
@@ -680,25 +680,301 @@ For all participants there was substantially more yaw change than pitch change, 
 	\end{center}
 \end{figure}
 
-***plots of pitch against yaw showing this for traditional \& both 1-3 \& 1-4
+\begin{table}
+\begin{center}
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
 
-***standard deviation tables for pitch \& yaw
+\textbf{Participant} & \textbf{Pitch (\textdegree)} & \textbf{Yaw (\textdegree)} \\
+
+\hline
+
+7 & 13.013 & 87.822 \\
+
+\hline
+
+8 & 13.917 & 94.436 \\
+
+\hline
+
+9 & 12.039 & 87.956 \\
+
+\hline
+
+10 & no data & no data \\
+
+\hline
+
+11 & no data & no data \\
+
+\hline
+
+12 & no data & no data \\
+
+\hline
+
+13 & no data & no data \\
+
+\hline
+
+\end{tabular}
+\caption{Standard deviation in pitch \& yaw for traditional scenario.}
+\label{2-1-sd-trad}
+\end{center}
+\end{minipage}
+\end{center}
+\end{table}
+
+\begin{table}
+\begin{center}
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+\textbf{Participant} & \textbf{Pitch (\textdegree)} & \textbf{Yaw (\textdegree)} \\
+
+\hline
+
+7 & no data & no data \\
+
+\hline
+
+8 & 10.253 & 102.254 \\
+
+\hline
+
+9 & 13.734 & 84.076 \\
+
+\hline
+
+10 & 17.833 & 84.578 \\
+
+\hline
+
+11 & 11.540 & 76.445 \\
+
+\hline
+
+12 & 19.635 & 74.696 \\
+
+\hline
+
+13 & 22.095 & 91.827 \\
+
+\hline
+\end{tabular}
+\caption{Standard deviation in pitch \& yaw for PR scenario with transitions 1-3 (RW \& VR periods combined).}
+\label{2-1-sd-1-3}
+\end{center}
+\end{minipage}
+%
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+\textbf{Participant} & \textbf{Pitch (\textdegree)} & \textbf{Yaw (\textdegree)} \\
+
+\hline
+
+7 & no data & no data \\
+
+\hline
+
+8 & 11.493 & 89.531 \\
+
+\hline
+
+9 & 12.365 & 95.144 \\
+
+\hline
+
+10 & 14.059 & 90.429 \\
+
+\hline
+
+11 & 8.354 & 82.279 \\
+
+\hline
+
+12 & 22.202 & 75.425 \\
+
+\hline
+
+13 & 19.530 & 62.321 \\
+
+\hline
+\end{tabular}
+\caption{Standard deviation in pitch \& yaw for PR scenario with transitions 1-4 (RW \& VR periods combined).}
+\label{2-1-sd-1-4}
+\end{center}
+\end{minipage}
+\end{center}
+\end{table}
+
+\textbf{Can't really compare between traditional \& PR, however for what we do have of traditional they exhibit this more yaw than pitch relationship. This is the same as for stage 1.}
 
 %=====================
 
 \subsubsection{Comparing RW \& VR periods within PR scenarios}
 
-For five out of seven participants, yaw change was greater when looking at virtual then looking at real for both 1-3 \& 1-4. Some quite substantially so. Difference between yaw change in real \& virtual greater in 1-4 than in 1-33, though this could be familiarity.
+When comparing pitch \& yaw data between the RW \& VR periods within the two PR scenarios, five out of the seven participants displayed greater change in yaw when perceiving VR stimuli than when perceiving RW stimuli for both scenario 1-3 \& scenario 1-4. Figure \ref{8-1-3-pitch-yaw.png} illustrates this relationship for participant 8 undertaking scenario 1-3 while figure \ref{12-1-4-pitch-yaw.png} illustrates the relationship for participant 12 undertaking scenario 1-4.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/8-1-3-pitch-yaw.png}
+	\caption{Pitch \& yaw against time for participant 8 in scenario 1-3, showing RW/VR transitions.}
+	\label{8-1-3-pitch-yaw.png}
+	\end{center}
+\end{figure}
+
+%\begin{figure}[h]
+%	\begin{center}
+%	\includegraphics[width=\textwidth]{2.1/8-1-4-pitch-yaw.png}
+%	\caption{Pitch \& yaw against time for participant 8 in scenario 1-4, showing RW/VR transitions.}
+%	\label{8-1-4-pitch-yaw.png}
+%	\end{center}
+%\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/12-1-4-pitch-yaw.png}
+	\caption{Pitch \& yaw against time for participant 12 in scenario 1-4, showing RW/VR transitions.}
+	\label{12-1-4-pitch-yaw.png}
+	\end{center}
+\end{figure}
+
+\textbf{Difference between yaw change in real \& virtual greater in 1-4 than in 1-3, though this could be familiarity.}
+
+When comparing head movement, as mean standard deviation weighted by duration of the periods, between the RW \& VR portions of the PR scenarios, for most participants there is larger change in yaw during VR periods than RW periods of scenario 1-3 (see table \ref{mean-sd-yaw-1-3}), however the difference is not great. When considering the same criteria for scenario 1-4 (see table \ref{mean-sd-yaw-1-4}) however, all participants display greater change in yaw during VR periods, most quite substantially so. At the same time, all participants in scenario 1-4 showed less change in yaw in the RW periods than in the RW periods of scenrio 1-3. Whilst this apparent increased comfort with larger head movements in VR could be explained due to familiarity, the magnitude of the difference between scenario 1-3 \& scenario 1-4 makes it hard to believe that familiarity is the sole reason. \textbf{And because scenario 1-4 is not really that different to 1-3 (it's just the addition of the automatic switch).}
+
+\begin{table}
+\begin{center}
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+\textbf{Participant} & \textbf{RW (\textdegree)} & \textbf{VR (\textdegree)} \\
+
+\hline
+
+7 & no data & no data \\
+
+\hline
+
+8 & 41.680 & 42.228 \\
+
+\hline
+
+9 & 19.274 & 31.133 \\
+
+\hline
+
+10 & 13.541 & 16.758 \\
+
+\hline
+
+11 & 28.030 & 16.751 \\
+
+\hline
+
+12 & 38.654 & 28.494 \\
+
+\hline
+
+13 & 29.623 & 39.717 \\
+
+\hline
+\end{tabular}
+\caption{Weighted mean sd in yaw for scenario 1-3.}
+\label{mean-sd-yaw-1-3}
+\end{center}
+\end{minipage}
+%
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+\textbf{Participant} & \textbf{RW (\textdegree)} & \textbf{VR (\textdegree)} \\
+
+\hline
+
+7 & 20.228 & 50.963 \\
+
+\hline
+
+8 & 10.783 & 50.593 \\
+
+\hline
+
+9 & 13.579 & 27.398 \\
+
+\hline
+
+10 & 10.7334 & 34.981 \\
+
+\hline
+
+11 & 13.500 & 13.513 \\
+
+\hline
+
+12 & 16.248 & 50.326 \\
+
+\hline
+
+13 & 7.269 & 57.162 \\
+
+\hline
+\end{tabular}
+\caption{Weighted mean sd in yaw for scenario 1-4.}
+\label{mean-sd-yaw-1-4}
+\end{center}
+\end{minipage}
+\end{center}
+\end{table}
 
 %=====================
 
 \subsubsection{Other}
 
+Looking at individual participants in more detail leads to some interesting observations.
+
+`Trying out' transitions
+	participant 7 scenario 1-4 shows
+	participant 9 scenario 1-3 \& 1-4
+	participant 11 scenario 1-3 \& 1-4
+	participant 13 1-3 \& 1-4
+
+Movement vs head movement
+	participant 8 all(?)
+	participant 9 traditional, 1-3 \& 1-4
+	participant 13 1-3
+
+Time spent in virtual
+	participant 8 - more time spent in VR in 1-4 to avoid the automatic switch
+	participant 9 - more time spent in VR because of better understanding what they were meant to be doing (familiarity)
+	
+Other
+	participant 12 - all big head movements in 1-4 were in VR, but in 1-3 there was RW head movement too?
+
+
+
+
+
+
+
+
 Number of transitions in each session ranged from high teens to low sixties.
 
 Mean times spent in real/virtual are much closer than in stage 1.
 
-four of seven participants spent mroe time in real than virtual in both 1-3 \& 1-4
+four of seven participants spent more time in real than virtual in both 1-3 \& 1-4
 	for three participants the ratio was closer in 1-4 than in 1-3
 	one spent more time in virtual than real in both 1-3 \& 1-4
 	one spent more time in real in 1-3 \& then more time in virtual tin 1-4 (familiarity?)
