--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -945,11 +945,51 @@ When comparing head movement, as mean standard deviation weighted by duration of
 
 Looking at individual participants in more detail leads to some interesting observations.
 
-`Trying out' transitions
-	participant 7 scenario 1-4 shows
-	participant 9 scenario 1-3 \& 1-4
-	participant 11 scenario 1-3 \& 1-4
-	participant 13 1-3 \& 1-4
+%=====================
+
+\subsubsection{Experimenting With Transition Styles}
+
+Some participants showed an understandable behaviour where they `tried out' the different transition styles before adopting one that they then used predominantly throughout the rest of the scenario. Participant 11 showed this behaviour in its most extreme case during scenario 1-3, when s/he tried each transition style once at the very beginning of the scenario \& then only used transition 3 (via the right trigger \texttt{[RT]}) throughout the rest of the scenario (figure \ref{11-pitch-yaw-1-3.png}). However when s/he came to perform scenario 1-4, s/he seemed to take this opportunity as a second chance to experiment with all of the different transition styles, using transitions 1, 2 \& 3 at different points throughout the scenario (figure \ref{11-pitch-yaw-1-4.png}).
+
+\begin{figure}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/11-pitch-yaw-1-3.png}
+	\caption{Pitch \& yaw against time for participant 11 in scenario 1-3, showing RW/VR transitions.}
+	\label{11-pitch-yaw-1-3.png}
+	\end{center}
+\end{figure}
+
+\begin{figure}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/11-pitch-yaw-1-4.png}
+	\caption{Pitch \& yaw against time for participant 11 in scenario 1-3, showing RW/VR transitions.}
+	\label{11-pitch-yaw-1-4.png}
+	\end{center}
+\end{figure}
+
+Participant 7 showed this behaviour in a less extreme fashion, spending more time with each of the three user-controllable transition styles before settling upon transition 3, during scenario 1-4 (figure \ref{7-pitch-yaw-1-4.png}).
+
+\begin{figure}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/7-pitch-yaw-1-4.png}
+	\caption{Pitch \& yaw against time for participant 7 in scenario 1-4, showing RW/VR transitions.}
+	\label{7-pitch-yaw-1-4.png}
+	\end{center}
+\end{figure}
+
+Some participants however continued to use all available transition styles throughout a session, such as participant 13 during scenario 1-3 (figure \ref{13-pitch-yaw-1-3.png}). This was one of the longest individual sessions, with the participant exploring the RW \& VR chapels in tandem in PR via the Mirrorshades platform for over 8.5 minutes. During the interview, s/he reported preferring transition 3 via the right trigger \texttt{[RT]} which is corroborated by the data - s/he triggered this transition more than transition 1 or 2 (25 times total, compared to 20 for transition 1 \& 14 for transition 2) \& spent longer perceiving VR via transition 3 (103 seconds total compared to 81.5 seconds for transition 1 \& 20 seconds for transition 2, with a mean of 4.12 seconds for each period using transition 3, 4.075 seconds for transition 1 \& 1.429 seconds for transition 2).
+
+\begin{figure}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/13-pitch-yaw-1-3.png}
+	\caption{Pitch \& yaw against time for participant 13 in scenario 1-3, showing RW/VR transitions.}
+	\label{13-pitch-yaw-1-3.png}
+	\end{center}
+\end{figure}
+
+%=====================
+
+\subsubsection{Walking \& Head Movement}
 
 Movement vs head movement
 	participant 8 all(?)
