--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -951,7 +951,7 @@ Looking at individual participants in more detail leads to some interesting obse
 
 Some participants showed an understandable behaviour where they `tried out' the different transition styles before adopting one that they then used predominantly throughout the rest of the scenario. Participant 11 showed this behaviour in its most extreme case during scenario 1-3, when s/he tried each transition style once at the very beginning of the scenario \& then only used transition 3 (via the right trigger \texttt{[RT]}) throughout the rest of the scenario (figure \ref{11-pitch-yaw-1-3.png}). However when s/he came to perform scenario 1-4, s/he seemed to take this opportunity as a second chance to experiment with all of the different transition styles, using transitions 1, 2 \& 3 at different points throughout the scenario (figure \ref{11-pitch-yaw-1-4.png}).
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/11-pitch-yaw-1-3.png}
 	\caption{Pitch \& yaw against time for participant 11 in scenario 1-3, showing RW/VR transitions.}
@@ -959,7 +959,7 @@ Some participants showed an understandable behaviour where they `tried out' the 
 	\end{center}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/11-pitch-yaw-1-4.png}
 	\caption{Pitch \& yaw against time for participant 11 in scenario 1-3, showing RW/VR transitions.}
@@ -969,7 +969,7 @@ Some participants showed an understandable behaviour where they `tried out' the 
 
 Participant 7 showed this behaviour in a less extreme fashion, spending more time with each of the three user-controllable transition styles before settling upon transition 3, during scenario 1-4 (figure \ref{7-pitch-yaw-1-4.png}).
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/7-pitch-yaw-1-4.png}
 	\caption{Pitch \& yaw against time for participant 7 in scenario 1-4, showing RW/VR transitions.}
@@ -979,7 +979,7 @@ Participant 7 showed this behaviour in a less extreme fashion, spending more tim
 
 Some participants however continued to use all available transition styles throughout a session, such as participant 13 during scenario 1-3 (figure \ref{13-pitch-yaw-1-3.png}). This was one of the longest individual sessions, with the participant exploring the RW \& VR chapels in tandem in PR via the Mirrorshades platform for over 8.5 minutes. During the interview, s/he reported preferring transition 3 via the right trigger \texttt{[RT]} which is corroborated by the data - s/he triggered this transition more than transition 1 or 2 (25 times total, compared to 20 for transition 1 \& 14 for transition 2) \& spent longer perceiving VR via transition 3 (103 seconds total compared to 81.5 seconds for transition 1 \& 20 seconds for transition 2, with a mean of 4.12 seconds for each period using transition 3, 4.075 seconds for transition 1 \& 1.429 seconds for transition 2).
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/13-pitch-yaw-1-3.png}
 	\caption{Pitch \& yaw against time for participant 13 in scenario 1-3, showing RW/VR transitions.}
@@ -991,10 +991,31 @@ Some participants however continued to use all available transition styles throu
 
 \subsubsection{Walking \& Head Movement}
 
-Movement vs head movement
-	participant 8 all(?)
-	participant 9 traditional, 1-3 \& 1-4
-	participant 13 1-3
+As seen in the results to the stage 1 evaluation, there is also a correlation in the stage 2.1 results between position \& change in head movement, with several participants displaying greater changes in head pitch \& yaw while standing still than when walking with the DK1. This is true for both PR scenarios; figure \ref{8-1-3_2up.png} shows pitch \& yaw against time above, aligned with distance moved against time below, for participant 8 performing scenario 1-3, while figure \ref{9-1-4_2up.png} shows the same arrangement for participant 9 performing scenario 1-4. Especially after taking into consideration the slight lag in IPS data, the stationary periods starting around 120, 160, 200 \& 240 seconds in figure \ref{8-1-3_2up.png} \& those starting around 70, 150 \& 210 seconds in figure \ref{9-1-4_2up.png} all coincide fairly closely with pronounced changes in yaw.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/8-1-3_2up.png}
+	\caption{Pitch \& yaw against time aligned with distance moved against time for participant 8 in scenario 1-3, showing RW/VR transitions.}
+	\label{8-1-3_2up.png}
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.1/9-1-4_2up.png}
+	\caption{Pitch \& yaw against time aligned with distance moved against time for participant 9 in scenario 1-4, showing RW/VR transitions.}
+	\label{9-1-4_2up.png}
+	\end{center}
+\end{figure}
+
+%=====================
+
+\subsubsection{Use of Intermediary Opacities}
+
+Participant 9, both 1-3 \& 1-4
+
+%=====================
 
 Time spent in virtual
 	participant 8 - more time spent in VR in 1-4 to avoid the automatic switch
